--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,25 @@
   <title>Zabdos</title>
 </head>
 <body>
-  
+  <section class="main-section">
+    <header class="main-section__header">
+      <div class="main-section__logo-wrapper">
+        <img alt="brand logo" class="main-section__logo-icon" src="../src/assets/logo.svg" />
+        <h1>Zabdos</h1>
+      </div>
+
+      <nav>
+        <button class="main-section__button">Flight Status</button>
+        <button class="main-section__button">Check In</button>
+        <button class="main-section__profile-button"></button>
+        <button class="main-section__navigation-button"></button>
+      </nav>
+    </header>
+    <main></main>
+  </section>
+
+  <section></section>
+
+  <section></section>
 </body>
 </html>
