Add profile picture icon in navigation

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <button class="btn main-section__button">Flight Status</button>
         <button class="btn main-section__button">Check In</button>
         <button class="btn main-section__button -profile">
-          <img alt="navigation" src="../src/assets/icons/navigation-icon.svg" />
+          <img alt="profile picture" class="main-section__profile-picture" src="../src/assets/images/profile-picture.png" />
         </button>
         <button class="btn main-section__navigation-button">
           <img alt="navigation" src="../src/assets/icons/navigation-icon.svg" />
