main page implementation

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
       </div>
       
       <nav class="main-section__wrapper">
-        <button class="btn main-section__button">Flight Status</button>
-        <button class="btn main-section__button">Check In</button>
-        <button class="btn main-section__button -profile">
+        <button class="btn main-section__navigation-button">Flight Status</button>
+        <button class="btn main-section__navigation-button">Check In</button>
+        <button class="btn main-section__navigation-button -profile">
           <img alt="profile picture" class="main-section__profile-picture" src="../src/assets/images/profile-picture.png" />
         </button>
         <button class="btn main-section__navigation-button">
@@ -26,7 +26,23 @@
          </button>
       </nav>
     </header>
-    <main></main>
+
+    <main>
+      <p>Fly with us to</p>
+      <h2 class="main-section__subtitle">Bangkok</h2>
+      <p>A new door to Paradise <br /> for just 	&#8377;15000</p>
+
+      <div class="main-section__additional-info">
+        <p>Book now till 25 Oct 2019</p>
+        <p>Travel from 25 Oct 2019 to 25 Dec 2019</p>
+      </div>
+
+      <button class="btn main-section__button">
+        <span class="main-section__button-info">Let's Go</span>
+        <img alt="right arrow" class="main-section__button-icon" src="../src/assets/icons/right-arrow.svg" />
+      </button>
+
+    </main>
   </section>
 
   <section></section>
