Simple second page implementation

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,55 @@
     </main>
   </section>
 
-  <section></section>
+  <section class="video-section">
+    <div class="video-section__column">
+      <h2 class="video-section__main-header">The Zabdos Experience</h2>
+      <p>Whether it's your first flight or simply your latest, we work to anticipate your every need</p>
+      <hr />
+      <div class="video-section__wrapper">
+        <button class="btn"></button>
+        <span>Watch the full video now!</span>
+      </div>
+    </div>
+
+    <div class="video-section__column">
+      <section class="video-section__card">
+        <img alt="" src="../src/assets/images/video-section1.png"/>
+        <div class="video-section__card-wrapper">
+          <div class="video-section__card-info-wrapper">
+            <p class="video-section__card-info">Arrive inspired</p>
+            <hr />
+          </div>
+          <h3 class="video-section__card-title">Business Class</h3>
+        </div>
+      </section>
+
+      <section class="video-section__card">
+          <img alt=""src="../src/assets/images/video-section1.png" />
+        <div class="video-section__card-wrapper">
+          <div class="video-section__card-info-wrapper">
+            <p class="video-section__card-info">Expect the exceptional</p>
+            <hr />
+          </div>
+          <h3 class="video-section__card-title">Economy Class</h3>
+        </div>
+      </section>
+    </div>
+
+    <div class="video-section__column">
+      <section class="video-section__card">
+        <img alt="" src="../src/assets/images/video-section2.png" />
+        <div class="video-section__card-wrapper">
+          <div class="video-section__card-info-wrapper">
+            <p class="video-section__card-info">Award winning technology</p>
+            <hr />
+          </div>
+          <h3 class="video-section__card-title">Explore the Fleet in AR</h3>
+        </div>
+      </section>
+    </div>
+
+  </section>
 
   <section></section>
 </body>
