Add simple third page implementation

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,20 @@
   <section class="main-section">
     <header class="main-section__header">
       <div class="main-section__wrapper">
-        <img alt="brand logo" class="main-section__logo-icon" src="../src/assets/icons/logo.svg" />
+        <svg 
+	      viewBox="0 0 490.037 490.037"
+        class="main-section__logo-icon" 
+        fill="#FFF"
+        version="1.1"  
+        xml:space="preserve" 
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        xmlns="http://www.w3.org/2000/svg" 
+        >
+          <path d="M91.483,490.019l153.535-160.332l153.535,160.332l91.483-91.439l-69.81-72.906l69.81-69.775L245.019,0.019L0,255.898
+            l69.81,69.775L0,398.58L91.483,490.019z M42.905,255.434L245.019,44.346l202.114,211.089l-48.1,48.07L245.019,142.678
+            L91.004,303.504L42.905,255.434z M245.019,187.02l202.114,211.081l-48.1,48.085L245.019,285.345L91.004,446.186l-48.1-48.085
+            L245.019,187.02z" />
+        </svg>
         <h1 class="main-section__brand-name">Zabdos</h1>
       </div>
       
@@ -22,7 +35,13 @@
           <img alt="profile picture" class="main-section__profile-picture" src="../src/assets/images/profile-picture.png" />
         </button>
         <button class="btn main-section__navigation-button">
-          <img alt="navigation" src="../src/assets/icons/navigation-icon.svg" />
+            <svg 
+            fill="white" 
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 64 64"
+            width="48px" 
+            height="48px"
+            ><path d="M51 46c1.104 0 2 .895 2 2 0 1.105-.896 2-2 2-.601 0-37.399 0-38 0-1.104 0-2-.895-2-2 0-1.105.896-2 2-2C13.601 46 50.399 46 51 46zM51 30c1.104 0 2 .895 2 2 0 1.105-.896 2-2 2-.601 0-37.399 0-38 0-1.104 0-2-.895-2-2 0-1.105.896-2 2-2C13.601 30 50.399 30 51 30zM51 14c1.104 0 2 .895 2 2 0 1.105-.896 2-2 2-.601 0-37.399 0-38 0-1.104 0-2-.895-2-2 0-1.105.896-2 2-2C13.601 14 50.399 14 51 14z"/></svg>
          </button>
       </nav>
     </header>
@@ -39,7 +58,9 @@
 
       <button class="btn main-section__button">
         <span class="main-section__button-info">Let's Go</span>
-        <img alt="right arrow" class="main-section__button-icon" src="../src/assets/icons/right-arrow.svg" />
+        <svg class="main-section__button-icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
+          <path fill="#6c74e9" d="M640 768c-12.8 0-21.333333-4.266667-29.866667-12.8-17.066667-17.066667-17.066667-42.666667 0-59.733333l213.333333-213.333333c17.066667-17.066667 42.666667-17.066667 59.733333 0s17.066667 42.666667 0 59.733333l-213.333333 213.333333C661.333333 763.733333 652.8 768 640 768z"  /><path fill="#6c74e9" d="M853.333333 554.666667c-12.8 0-21.333333-4.266667-29.866667-12.8l-213.333333-213.333333c-17.066667-17.066667-17.066667-42.666667 0-59.733333s42.666667-17.066667 59.733333 0l213.333333 213.333333c17.066667 17.066667 17.066667 42.666667 0 59.733333C874.666667 550.4 866.133333 554.666667 853.333333 554.666667z"  /><path fill="#6c74e9" d="M853.333333 554.666667 170.666667 554.666667c-25.6 0-42.666667-17.066667-42.666667-42.666667s17.066667-42.666667 42.666667-42.666667l682.666667 0c25.6 0 42.666667 17.066667 42.666667 42.666667S878.933333 554.666667 853.333333 554.666667z"  />
+        </svg>
       </button>
 
     </main>
@@ -95,6 +116,165 @@
 
   </section>
 
-  <section></section>
+  <section class="services-section">
+    <header class="services-section__header">
+      <h2 class="services-section__main-header">Complement Your Journey</h2>
+      <p class="services-section__header-info">Explore the additional services we offer to make your journey even more memorable</p>
+    </header>
+
+    <main class="services-section__main">
+      <div class="services-section__button-wrapper">
+        <button class="services-section__button">
+          <svg
+          class="services-section__icon"
+          height="24px"
+          version="1.1"
+          viewBox="0 0 492.308 492.308"  
+          width="24px" 
+          xml:space="preserve"
+          xmlns:xlink="http://www.w3.org/1999/xlink" 
+          xmlns="http://www.w3.org/2000/svg" 
+             >
+              <path d="M426.567,46.212V28.923C426.567,12.971,413.591,0,397.639,0c-15.947,0-28.923,12.971-28.923,28.923v17.288H123.591V28.923
+                C123.591,12.971,110.615,0,94.668,0C78.721,0,65.745,12.971,65.745,28.923v17.288H0v446.096h492.308V46.212H426.567z
+                 M388.409,28.923c0-5.087,4.144-9.231,9.236-9.231c5.091,0,9.231,4.144,9.231,9.231v43.596h-18.466V28.923z M85.437,28.923
+                c0-5.087,4.139-9.231,9.231-9.231c5.091,0,9.231,4.144,9.231,9.231v43.596H85.437V28.923z M472.615,472.615H19.692V173.404
+                h452.923V472.615z M472.615,153.712H19.692V65.904h46.053v26.308h57.846V65.904h245.125v26.308h57.851V65.904h46.048V153.712z"/>
+          </svg>
+        </button>
+
+        <p>Manage Booking</p>
+      </div>
+
+      <div class="services-section__button-wrapper">
+        <button class="services-section__button">
+          <svg 
+          class="services-section__icon"
+          height="24px"
+          version="1.1"
+          viewBox="0 0 511 511"
+          width="24px" 
+          xml:space="preserve"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          xmlns="http://www.w3.org/2000/svg" 
+          >
+          <path d="M445.663,469.921l-14.362-359.041C430.968,102.537,424.165,96,415.814,96H351v-0.5C351,42.841,308.159,0,255.5,0
+            S160,42.841,160,95.5V96H95.187c-8.351,0-15.153,6.536-15.488,14.88L65.337,469.921c-0.434,10.842,3.468,21.122,10.985,28.946
+            C83.84,506.691,93.956,511,104.806,511h301.389c10.851,0,20.966-4.309,28.484-12.133
+            C442.195,491.042,446.097,480.763,445.663,469.921z M175,95.5c0-44.388,36.112-80.5,80.5-80.5S336,51.112,336,95.5V96H175V95.5z
+              M423.862,488.474c-4.663,4.853-10.938,7.526-17.667,7.526H104.806c-6.73,0-13.004-2.672-17.667-7.525
+            c-4.663-4.853-7.083-11.229-6.813-17.954L94.687,111.48c0.011-0.27,0.23-0.48,0.5-0.48H160v48.5c0,4.142,3.358,7.5,7.5,7.5
+            s7.5-3.358,7.5-7.5V111h161v48.5c0,4.142,3.358,7.5,7.5,7.5s7.5-3.358,7.5-7.5V111h64.814c0.269,0,0.488,0.21,0.499,0.48
+          l14.362,359.041C430.944,477.245,428.524,483.621,423.862,488.474z"/>
+          </svg>
+
+        </button>
+        <p>Excess baggage</p>
+      </div>
+
+      <div class="services-section__button-wrapper">
+        <button class="services-section__button">
+          <svg 
+          class="services-section__icon"
+          height="24px"
+          version="1.1" 
+          viewBox="0 0 463 463" 
+          width="24px" 
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          xmlns="http://www.w3.org/2000/svg" 
+          >
+            <path d="m367.5,232c-5.646,0-11.161,0.742-16.5,2.177v-2.677c0-12.958-10.542-23.5-23.5-23.5h-272c-12.958,0-23.5,10.542-23.5,23.5v112c0,32.59 15.237,64.305 40,83.741v12.259c0,12.958 10.542,23.5 23.5,23.5h192c12.958,0 23.5-10.542 23.5-23.5v-12.259c17.495-13.731 30.226-33.594 36.197-55.563 6.506,2.201 13.305,3.322 20.303,3.322 35.014,0 63.5-28.486 63.5-63.5v-16c0-35.014-28.486-63.5-63.5-63.5zm-16.5,63.5c0-9.098 7.402-16.5 16.5-16.5s16.5,7.402 16.5,16.5v16c0,9.098-7.402,16.5-16.5,16.5s-16.5-7.402-16.5-16.5v-16zm-63.5,152.5h-192c-4.687,0-8.5-3.813-8.5-8.5v-8.5h209v8.5c0,4.687-3.813,8.5-8.5,8.5zm48.5-104.5c0,28.378-13.351,55.925-34.987,72.5h-219.026c-21.636-16.576-34.987-44.122-34.987-72.5v-112c0-4.687 3.813-8.5 8.5-8.5h272c4.687,0 8.5,3.813 8.5,8.5v64 16 32zm80-32c0,26.743-21.757,48.5-48.5,48.5-6.015,0-11.832-1.089-17.35-3.21 0.555-4.395 0.85-8.833 0.85-13.29v-5.181c4.802,2.965 10.454,4.681 16.5,4.681 17.369,0 31.5-14.131 31.5-31.5v-16c0-17.369-14.131-31.5-31.5-31.5-6.046,0-11.698,1.716-16.5,4.681v-18.792c5.264-1.91 10.793-2.889 16.5-2.889 26.743,0 48.5,21.757 48.5,48.5v16z"/>
+            <path d="m186.434,148.65c-8.213,7.525-18.434,16.89-18.434,34.85 0,4.142 3.357,7.5 7.5,7.5s7.5-3.358 7.5-7.5c0-11.36 5.987-16.845 13.566-23.79 8.213-7.525 18.434-16.89 18.434-34.85 0-17.969-10.22-27.339-18.432-34.869-7.581-6.949-13.568-12.44-13.568-23.811 0-11.372 5.988-16.862 13.568-23.813 8.212-7.528 18.432-16.898 18.432-34.867 0-4.142-3.357-7.5-7.5-7.5s-7.5,3.358-7.5,7.5c0,11.371-5.987,16.861-13.568,23.812-8.212,7.529-18.432,16.899-18.432,34.868s10.22,27.339 18.432,34.868c7.58,6.951 13.568,12.441 13.568,23.813 0,11.359-5.987,16.845-13.566,23.789z"/>
+            <path d="m234.434,148.65c-8.213,7.525-18.434,16.89-18.434,34.85 0,4.142 3.357,7.5 7.5,7.5s7.5-3.358 7.5-7.5c0-11.36 5.987-16.845 13.566-23.79 8.213-7.524 18.434-16.89 18.434-34.85 0-17.969-10.22-27.339-18.432-34.869-7.581-6.949-13.568-12.44-13.568-23.811 0-4.142-3.357-7.5-7.5-7.5s-7.5,3.358-7.5,7.5c0,17.969 10.22,27.339 18.432,34.868 7.58,6.951 13.568,12.441 13.568,23.813 0,11.359-5.987,16.845-13.566,23.789z"/>
+            <path d="m138.434,148.65c-8.213,7.525-18.434,16.89-18.434,34.85 0,4.142 3.357,7.5 7.5,7.5 4.143,0 7.5-3.358 7.5-7.5 0-11.36 5.987-16.845 13.566-23.79 8.213-7.524 18.434-16.89 18.434-34.85 0-17.969-10.22-27.339-18.432-34.869-7.581-6.949-13.568-12.44-13.568-23.811 0-4.142-3.357-7.5-7.5-7.5s-7.5,3.358-7.5,7.5c0,17.969 10.22,27.339 18.432,34.868 7.58,6.951 13.568,12.441 13.568,23.813 0,11.359-5.987,16.845-13.566,23.789z"/>
+          </svg>
+
+        </button>
+        <p>Paid Lounge Access</p>
+      </div>
+
+      <div class="services-section__button-wrapper">
+        <button class="services-section__button">
+          <svg 
+          class="services-section__icon"
+          version="1.1"
+          viewBox="0 0 135.938 135.938"
+          width="24px" height="24px"
+          xml:space="preserve"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          xmlns="http://www.w3.org/2000/svg" 
+          >
+          <path d="M59.333,0c-1.937,0-3.504,1.567-3.504,3.504v26.062h-4.411V3.504C51.417,1.567,49.852,0,47.913,0
+             s-3.504,1.567-3.504,3.504v26.062h-4.411V3.504C39.998,1.567,38.43,0,36.493,0c-1.938,0-3.504,1.567-3.504,3.504V33.07
+             c0,1.939,1.565,3.504,3.504,3.504h7.916v95.857c0,1.94,1.566,3.504,3.504,3.504s3.504-1.563,3.504-3.504v-95.86h7.916
+             c1.938,0,3.504-1.565,3.504-3.504V3.501C62.837,1.567,61.271,0,59.333,0z"/>
+          <path d="M100.618,0.204c-1.39-0.498-2.953-0.063-3.888,1.093C74.216,28.953,81.645,67.061,81.974,68.669
+             c0.335,1.632,1.766,2.806,3.432,2.806H95.94v60.959c0,1.94,1.563,3.504,3.504,3.504c1.938,0,3.505-1.563,3.505-3.504V3.511
+             C102.949,2.022,102.014,0.698,100.618,0.204z M95.94,64.458h-7.539c-1.026-7.705-2.759-29.897,7.539-49.327V64.458z"/>
+          </svg>
+        </button>
+
+        <p>Oryx Airport Hotel</p>
+      </div>
+
+      <div class="services-section__button-wrapper">
+        <button class="services-section__button">
+          <svg 
+          class="services-section__icon"
+          height="24px"
+          version="1.1" 
+          viewBox="0 0 207.675 207.675"
+          width="24px" 
+          xml:space="preserve"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          xmlns="http://www.w3.org/2000/svg" 
+          >
+           <path d="M163.262,95.442c-0.66-0.999-1.779-1.602-2.977-1.602H103.66V3.563c0-1.71-1.215-3.179-2.895-3.503
+             c-1.673-0.31-3.352,0.599-3.984,2.187L44.077,134.979c-0.437,1.097-0.301,2.34,0.364,3.319c0.663,0.978,1.767,1.564,2.949,1.564
+             h63.608v64.247c0,1.692,1.191,3.151,2.848,3.493c0.24,0.049,0.481,0.073,0.719,0.073c1.402,0,2.706-0.832,3.275-2.162
+             L163.56,98.81C164.035,97.709,163.922,96.445,163.262,95.442z M118.13,186.732v-50.437c0-1.971-1.597-3.566-3.566-3.566H52.643
+             L96.528,22.207v75.199c0,1.971,1.597,3.566,3.566,3.566h54.783L118.13,186.732z"/>
+         </svg>
+        </button>
+        
+        <p>Al Maha Services</p>
+      </div>
+
+      <div class="services-section__button-wrapper">
+        <button class="services-section__button">
+          <svg 
+          class="services-section__icon"
+          height="24px" 
+          version="1.1" 
+          viewBox="0 0 489.999 489.999"  
+          width="24px" 
+          xml:space="preserve"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          xmlns="http://www.w3.org/2000/svg" 
+          >
+            <path d="M457.62,198.576c-1.975-2.392-4.917-3.776-8.021-3.776c-23.179,0-45.33-8.642-62.37-24.339l-51.559-47.497
+              c-10.272-9.467-23.626-14.679-37.604-14.679H48.672c-2.27,0-4.479,0.742-6.292,2.117c-2.514,1.893-61.219,48.373-36.178,206.734
+              c0.795,5.069,5.162,8.794,10.291,8.794h41.188c2.102,31.108,28.068,55.784,59.701,55.784c31.632,0,57.598-24.675,59.7-55.784
+              h116.598c2.102,31.108,28.068,55.784,59.701,55.784c31.632,0,57.598-24.675,59.7-55.784h58.258c3.715,0,7.146-1.975,9.019-5.191
+              C481.674,318.469,512.08,264.264,457.62,198.576z M321.541,138.294l47.007,43.304h-99.176v-52.465h28.695
+              C306.791,129.133,315.128,132.39,321.541,138.294z M248.524,181.597H138.718v-52.465h109.806V181.597z M52.784,129.133h65.087
+              v52.465H27.722C35.517,149.945,47.816,134.383,52.784,129.133z M59.938,305.083H25.473c-3.241-22.892-4.589-43.084-4.59-60.853
+              h13.141v-20.847H21.538c0.486-7.489,1.222-14.464,2.157-20.938h94.175v59.571c-0.163-0.001-0.324-0.012-0.488-0.012
+              C90.204,262.004,67.212,280.223,59.938,305.083z M117.383,360.867c-21.509,0-39.008-17.499-39.008-39.008
+              c0-21.509,17.498-39.008,39.008-39.008c21.508,0,39.007,17.499,39.007,39.008C156.39,343.368,138.891,360.867,117.383,360.867z
+                M138.718,265.949v-63.504h109.806v102.638h-73.697C169.564,287.096,156.074,272.596,138.718,265.949z M353.383,360.867
+              c-21.509,0-39.008-17.499-39.008-39.008c0-21.509,17.498-39.008,39.008-39.008c21.508,0,39.007,17.499,39.007,39.008
+              C392.39,343.368,374.891,360.867,353.383,360.867z M464.654,305.083h-53.827c-7.274-24.86-30.266-43.079-57.444-43.079
+              c-27.179,0-50.171,18.219-57.445,43.079h-26.567V202.445h127.238c14.705,7.822,31.026,12.333,47.909,13.09
+              C477.439,257.708,469.479,292.349,464.654,305.083z"/>
+            <path d="M441.384,219.332l14.21,14.211l-14.739,14.739l-14.211-14.21L441.384,219.332z"/>
+          </svg>
+        </button>
+
+        <p>Car Rentals</p>
+      </div>
+    </main>
+
+  </section>
 </body>
 </html>
